# ClotFormer

./: .gitignore  README.md  image_processing.py  main.py  pyproject.toml  run.sbatch
data/: split_data.py  test_split.csv  train_split.csv  train_with_patient_splits.csv  val_split.csv
data/data/: all_splits.csv  test_split.csv  train_split.csv  validation_split.csv
data/outputs/: computed_class_weights.csv  split_summary.csv  swinv2_final_test_summary.csv  swinv2_training_stats.csv
paper/: citations.bib  lib.typ  main.typ
slurm/: slurm_52598828.err  slurm_52598828.out  slurm_52598921.err  slurm_52598921.out  slurm_52600026.err  slurm_52600026.out  slurm_52600912.err  slurm_52600912.out  slurm_52670568.err  slurm_52670568.out
