[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ClotFormer"
version = "0.1.0"
description = "Swin model for stroke etiology prediction"
readme = "README.md"
requires-python = ">=3.9,<=3.13"
license = { text = "MIT" }
authors = [{ name = "Rajeev Atla" }]
dependencies = [
  "albumentations>=1.3.0",
  "ftfy>=6.1.0",
  "grad-cam>=1.4.0",
  "hydra-core>=1.2.0",
  "matplotlib>=3.5.0",
  "numpy>=1.21.0",
  "omegaconf>=2.2.0",
  "opencv-python>=4.6.0",
  "pandas>=1.4.0",
  "pillow>=9.0.0",
  "pyyaml>=6.0",
  "pytorch-lightning>=2.0.0",
  "ipython>=8.0.0",
  "jupyter>=1.0.0",
  "pytest>=7.0.0",
  "pytest-cov>=3.0.0",
  "regex>=2022.0.0",
  "scikit-learn>=1.1.0",
  "scipy>=1.7.0",
  "seaborn>=0.11.0",
  "tensorboard>=2.10.0",
  "timm>=0.6.0",
  "tokenizers>=0.13.0",
  "torch>=1.13.0",
  "torchaudio>=0.13.0",
  "torchvision>=0.14.0",
  "tqdm>=4.64.0",
  "transformers>=4.21.0",
  "wandb>=0.13.0",
  "certifi>=2025.10.5",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[tool.uv]
environments = ["sys_platform != 'darwin'"]